jACBrFramework/ACBrFramework_JNI/include/ACBrTEF.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;
#define DllImport extern "C"
#define DllImport extern


// Tipos de dados

typedef void (*AguardaRespCallback) (PCHAR Arquivo,int SegundosTimeOut,BOOL *Interromper);


typedef void (*AntesFinalizarRequisicaoCallback) (INTPTR Req);


typedef void (*BloqueiaMouseTecladoCallback) (BOOL Bloqueia,BOOL *Tratado);


typedef void (*ComandaECFAbreVinculadoCallback) (PCHAR COO,PCHAR IndiceECF,double Valor,RetornoECF *RetornoECF);


typedef void (*ComandaECFCallback) (ACBrTEFDOperacaoECF Operacao,INTPTR Resp,RetornoECF *RetornoECF);


typedef void (*ComandaECFImprimeViaCallback) (ACBrTEFDTipoRelatorio TipoRelatorio,int Via,INTPTR ImagemComprovante,int ImagemComprovanteCount,RetornoECF *RetornoECF);


typedef void (*ComandaECFPagamentoCallback) (PCHAR IndiceECF,double Valor,RetornoECF *RetornoECF);


typedef void (*ComandaECFSubtotalizaCallback) (double DescAcre,RetornoECF *RetornoECF);


typedef void (*DepoisConfirmarTransacoesCallback) (INTPTR RespostasPendentes);


typedef void (*ExecutaAcaoCallback) (BOOL *Tratado);


typedef void (*ExibeMsgCallback) (ACBrTEFDOperacaoMensagem Operacao,PCHAR Mensagem,ModalResult *AModalResult);


typedef void (*InfoECFCallback) (ACBrTEFDInfoECF Operacao,PCHAR RetornoECF,int RetornoECFLen);

DllImport int TEF_SetOnAguardaResp(const INTPTR tefHandler, const AguardaRespCallback method);

DllImport int TEF_SetOnAntesFinalizarRequisicao(const INTPTR tefHandler, const AntesFinalizarRequisicaoCallback method);

DllImport int TEF_SetOnBloqueiaMouseTeclado(const INTPTR tefHandler, const BloqueiaMouseTecladoCallback method);

DllImport int TEF_SetOnComandaECF(const INTPTR tefHandler, const ComandaECFCallback method);

DllImport int TEF_SetOnComandaECFAbreVinculado(const INTPTR tefHandler, const ComandaECFAbreVinculadoCallback method);

DllImport int TEF_SetOnComandaECFImprimeVia(const INTPTR tefHandler, const ComandaECFImprimeViaCallback method);

DllImport int TEF_SetOnComandaECFPagamento(const INTPTR tefHandler, const ComandaECFPagamentoCallback method);

DllImport int TEF_SetOnComandaECFSubtotaliza(const INTPTR tefHandler, const ComandaECFSubtotalizaCallback method);

DllImport int TEF_SetOnDepoisConfirmarTransacoes(const INTPTR tefHandler, const DepoisConfirmarTransacoesCallback method);

DllImport int TEF_SetOnExibeMsg(const INTPTR tefHandler, const ExibeMsgCallback method);

DllImport int TEF_SetOnInfoECF(const INTPTR tefHandler, const InfoECFCallback method);

DllImport int TEF_SetOnLimpaTeclado(const INTPTR tefHandler, const ExecutaAcaoCallback method);

DllImport int TEF_SetOnRestauraFocoAplicacao(const INTPTR tefHandler, const ExecutaAcaoCallback method);

DllImport int TEF_TEFCrediShop_GetArqReq(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFCrediShop_GetArqResp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFCrediShop_GetArqSTS(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFCrediShop_GetArqTemp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFCrediShop_GetAutoAtivarGP(const INTPTR tefHandle);

DllImport int TEF_TEFCrediShop_GetEsperaSTS(const INTPTR tefHandle);

DllImport int TEF_TEFCrediShop_GetGPExeName(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFCrediShop_GetNumVias(const INTPTR tefHandle);

DllImport int TEF_TEFCrediShop_SetArqReq(const INTPTR tefHandle, const PCHAR ArqReq);

DllImport int TEF_TEFCrediShop_SetArqResp(const INTPTR tefHandle, const PCHAR ArqResp);

DllImport int TEF_TEFCrediShop_SetArqSTS(const INTPTR tefHandle, const PCHAR ArqSTS);

DllImport int TEF_TEFCrediShop_SetArqTemp(const INTPTR tefHandle, const PCHAR ArqTemp);

DllImport int TEF_TEFCrediShop_SetAutoAtivarGP(const INTPTR tefHandle, const BOOL AutoAtivarGP);

DllImport int TEF_TEFCrediShop_SetEsperaSTS(const INTPTR tefHandle, const int EsperaSTS);

DllImport int TEF_TEFCrediShop_SetGPExeName(const INTPTR tefHandle, const PCHAR ExeName);

DllImport int TEF_TEFCrediShop_SetNumVias(const INTPTR tefHandle, const int NumVias);

DllImport int TEF_TEFFoxWin_GetArqReq(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFFoxWin_GetArqResp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFFoxWin_GetArqSTS(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFFoxWin_GetArqTemp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFFoxWin_GetAutoAtivarGP(const INTPTR tefHandle);

DllImport int TEF_TEFFoxWin_GetEsperaSTS(const INTPTR tefHandle);

DllImport int TEF_TEFFoxWin_GetGPExeName(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFFoxWin_GetNumVias(const INTPTR tefHandle);

DllImport int TEF_TEFFoxWin_SetArqReq(const INTPTR tefHandle, const PCHAR ArqReq);

DllImport int TEF_TEFFoxWin_SetArqResp(const INTPTR tefHandle, const PCHAR ArqResp);

DllImport int TEF_TEFFoxWin_SetArqSTS(const INTPTR tefHandle, const PCHAR ArqSTS);

DllImport int TEF_TEFFoxWin_SetArqTemp(const INTPTR tefHandle, const PCHAR ArqTemp);

DllImport int TEF_TEFFoxWin_SetAutoAtivarGP(const INTPTR tefHandle, const BOOL AutoAtivarGP);

DllImport int TEF_TEFFoxWin_SetEsperaSTS(const INTPTR tefHandle, const int EsperaSTS);

DllImport int TEF_TEFFoxWin_SetGPExeName(const INTPTR tefHandle, const PCHAR ExeName);

DllImport int TEF_TEFFoxWin_SetNumVias(const INTPTR tefHandle, const int NumVias);

DllImport int TEF_TEFGood_GetArqReq(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFGood_GetArqResp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFGood_GetArqSTS(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFGood_GetArqTemp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFGood_GetGPExeName(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFGood_SetArqReq(const INTPTR tefHandle, const PCHAR ArqReq);

DllImport int TEF_TEFGood_SetArqResp(const INTPTR tefHandle, const PCHAR ArqResp);

DllImport int TEF_TEFGood_SetArqSTS(const INTPTR tefHandle, const PCHAR ArqSTS);

DllImport int TEF_TEFGood_SetArqTemp(const INTPTR tefHandle, const PCHAR ArqTemp);

DllImport int TEF_TEFGood_SetGPExeName(const INTPTR tefHandle, const PCHAR ExeName);

DllImport int TEF_TEFPetrocard_GetArqReq(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFPetrocard_GetArqResp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFPetrocard_GetArqSTS(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFPetrocard_GetArqTemp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFPetrocard_GetAutoAtivarGP(const INTPTR tefHandle);

DllImport int TEF_TEFPetrocard_GetEsperaSTS(const INTPTR tefHandle);

DllImport int TEF_TEFPetrocard_GetGPExeName(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFPetrocard_GetNumVias(const INTPTR tefHandle);

DllImport int TEF_TEFPetrocard_SetArqReq(const INTPTR tefHandle, const PCHAR ArqReq);

DllImport int TEF_TEFPetrocard_SetArqResp(const INTPTR tefHandle, const PCHAR ArqResp);

DllImport int TEF_TEFPetrocard_SetArqSTS(const INTPTR tefHandle, const PCHAR ArqSTS);

DllImport int TEF_TEFPetrocard_SetArqTemp(const INTPTR tefHandle, const PCHAR ArqTemp);

DllImport int TEF_TEFPetrocard_SetAutoAtivarGP(const INTPTR tefHandle, const BOOL AutoAtivarGP);

DllImport int TEF_TEFPetrocard_SetEsperaSTS(const INTPTR tefHandle, const int EsperaSTS);

DllImport int TEF_TEFPetrocard_SetGPExeName(const INTPTR tefHandle, const PCHAR ExeName);

DllImport int TEF_TEFPetrocard_SetNumVias(const INTPTR tefHandle, const int NumVias);